--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^24.0.10",
     "@types/yargs": "^17.0.33",
+    "@vitest/coverage-v8": "^3.2.4",
     "msw": "^2.10.3",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
