--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
