--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint:md": "markdownlint-cli2"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "@types/node": "^24.0.10",
     "@types/yargs": "^17.0.33",
     "@vitest/coverage-v8": "^3.2.4",
+    "markdownlint-cli2": "^0.18.1",
     "msw": "^2.10.3",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
