--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build",
-    "test": "vitest run",
+    "test": "vitest",
+    "format": "prettier --write . && markdownlint-cli2 --fix",
     "lint:md": "markdownlint-cli2"
   },
   "keywords": [],
@@ -29,6 +30,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "markdownlint-cli2": "^0.18.1",
     "msw": "^2.10.3",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   }
