--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build",
+    "prepare": "husky install",
     "test": "vitest",
     "format": "prettier --write . && markdownlint-cli2 --fix",
     "lint:md": "markdownlint-cli2"
@@ -28,6 +29,7 @@
     "@types/node": "^24.0.10",
     "@types/yargs": "^17.0.33",
     "@vitest/coverage-v8": "^3.2.4",
+    "husky": "^9.1.7",
     "markdownlint-cli2": "^0.18.1",
     "msw": "^2.10.3",
     "prettier": "^3.6.2",
