--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@duckdb/node-api": "^1.3.2-alpha.24",
     "dotenv": "^17.1.0",
-    "duckdb": "^1.3.1",
     "postmark": "^4.0.5",
     "yargs": "^18.0.0"
   },
