--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@duckdb/node-api": "^1.3.2-alpha.24",
     "dotenv": "^17.1.0",
+    "google-auth-library": "^10.1.0",
+    "googleapis": "^152.0.0",
     "postmark": "^4.0.5",
     "yargs": "^18.0.0"
   },
