--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build",
     "prepare": "husky",
-    "test": "vitest",
+    "test": "vitest run",
     "format": "prettier --write . && markdownlint-cli2 --fix",
     "lint:md": "markdownlint-cli2",
     "migrate:add-customer-notes": "ts-node scripts/addCustomerFacingNotesColumn.ts"
