fix: Handle Postmark API errors and remove PII from console
- Implement type-safe error handling for Postmark API errors in .
- Display informative API error messages and exit the process on critical errors.
- Remove PII from console output by replacing  with  where appropriate.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
-POSTMARK_SERVER_TOKEN=your_postmark_server_token_here
+# For use with GeminiCLI
+GEMINI_MODEL="gemini-2.5-flash"
+GOOGLE_CLOUD_PROJECT="projectid"
+
+# postmarkclien.ts
+POSTMARK_API_TOKEN="your-postmark-api-token"
+
+# If using Google Sheets
+GOOGLE_GCP_CREDENTIALS_PATH="/path/to/token.json"
+GOOGLE_SHEETS_URL="https://docs.google.com/spreadsheets/d/your-sheet-id/"
+GOOGLE_SHEETS_SHEET_NAME="your-sheet-name"
+
+# If using DuckDB
+DB_PATH="/path/to/duck.db"
