update env example with PII logging var

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 GEMINI_MODEL="gemini-2.5-flash"
 GOOGLE_CLOUD_PROJECT="projectid"
 
+# PII Logging (set to "true" to enable logging of PII to pii.log)
+ENABLE_PII_LOGGING="false"
+
 # postmarkclien.ts
 POSTMARK_API_TOKEN="your-postmark-api-token"
 
