Refactor validation code; schema includes validation info; moved validation code inside base leadService class

--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "postmark": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc && npm run mjml:build",
-    "mjml:build": "mkdir -p dist/templates && mjml templates/mjml/test-template.mjml -o dist/templates/test-template.html && mjml templates/mjml/b2b-template.mjml -o dist/templates/b2b-template.html",
+    "build": "tsc",
+    "build:mjml": "mkdir -p dist/templates && mjml templates/mjml/test-template.mjml -o dist/templates/test-template.html && mjml templates/mjml/b2b-template.mjml -o dist/templates/b2b-template.html",
+    "build:all": "npm run build && npm run build:mjml",
     "start": "node dist/index.js",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build:all",
     "prepare": "husky",
     "test": "vitest run",
-    "format": "prettier --write . && markdownlint-cli2 --fix",
+    "format": "npm run format:code && npm run format:md",
+    "format:code": "prettier --write .",
+    "format:md": "markdownlint-cli2 --fix",
+    "lint": "npm run lint:code && npm run lint:md",
     "lint:md": "markdownlint-cli2",
-    "lint": "eslint --ext .js,.ts .",
-    "precommit-checks": "npm run format && npm run lint && npm run build && npm test",
+    "lint:code": "eslint --ext .js,.ts .",
+    "precommit-checks": "npm run format && npm run lint && npm run build:all && npm test",
     "migrate:add-customer-notes": "ts-node scripts/addCustomerFacingNotesColumn.ts",
     "smoke:test": "ENABLE_PII_LOGGING=true bash ./examples/send-command-example.sh"
   },
