--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "bin": {
-    "postmark": "./dist/index.js"
+    "postmark": "./dist/cli/main.js"
   },
   "scripts": {
     "build": "tsc",
