--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "js-yaml": "^4.1.0",
     "openapi-types": "^12.1.3",
     "postmark": "^4.0.5",
+    "sanitize-html": "^2.17.0",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "@types/html-to-text": "^9.0.4",
     "@types/node": "^24.0.10",
+    "@types/sanitize-html": "^2.16.0",
     "@types/yargs": "^17.0.33",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.31.0",
